# hack_dashboard

./: Dockerfile  docker-compose.yml  pyproject.toml  rewards.parquet  settings.parquet  users.parquet
.github/workflows/: ci.yaml
.streamlit/: config.toml
k8s/: deployment.yaml  kustomization.yaml
src/: app.py  insert_data.py  s3_utils.py  settings.py
src/pages/: 1_page_one.py  2_analytics.py  3_shop.py
